Atualiza o portfólio de MResgate, alterando o nome, imagem do logo e links de navegação. Remove ícones de redes sociais e ajusta estilos de CSS para a seção "Sobre" e a barra de navegação.

--- a/css/components/about.css
+++ b/css/components/about.css
@@ -27,6 +27,17 @@
   padding: 1rem;
 }
 
+.about .about__left ul li img {
+  width: 2rem;
+  height: 2rem;
+}
+
+.about .about__left ul li img[alt="Linkedin"],
+.about .about__left ul li img[alt="GitHub"] {
+  width: 3rem;
+  height: 3rem;
+}
+
 .about .about__right {
   flex: 1;
   max-width: 66rem;
